crates/ruff_python_parser/tests/snapshots/invalid_syntax@import_stmt_trailing_comma.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/import_stmt_trailing_comma.py
---
## AST

```
Module(
    ModModule {
        range: 0..22,
        body: [
            Import(
                StmtImport {
                    range: 0..8,
                    names: [],
                },
            ),
            Import(
                StmtImport {
                    range: 9..21,
                    names: [
                        Alias {
                            range: 16..17,
                            name: Identifier {
                                id: Name("x"),
                                range: 16..17,
                            },
                            asname: None,
                        },
                        Alias {
                            range: 19..20,
                            name: Identifier {
                                id: Name("y"),
                                range: 19..20,
                            },
                            asname: None,
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

error: Invalid syntax
  |
1 | import ,
  |        ^ Expected an import name
2 | import x, y,
  |


error: Invalid syntax
  |
1 | import ,
  |         ^ Expected one or more symbol names after import
2 | import x, y,
  |


error: Invalid syntax
  |
1 | import ,
2 | import x, y,
  |            ^ Trailing comma not allowed
  |
